# md-html

./: LICENCE  README.md  pyproject.toml
src/md_html/: __init__.py  __main__.py  __version__.py  elements.py  exceptions.py  handler.py  markdown.py  utils.py
src/md_html/elements/: __init__.py  base_element.py  body.py  content.py  head.py  heading.py  html.py  paragraph.py
tests/: __init__.py  conftest.py  test_elements.py  test_handler.py  test_markdown.py
tests/data/: a-grand-day-out.md  a-tower-of-blocks.md  basic.md  blockquote.md  code.md  inline-img.md  lists-and-quotes.md  mixed-content.md  perfectly-ripe-tomatoes.md  quantum-slopes.md  table.md
tests/data/sections/: a-tower-of-blocks.json  basic.json  basic.txt  blockquote.json  blockquote.txt  inline-img.json  perfectly-ripe-tomatoes.txt  quantum-slopes.json
tests/elements/: test_base_element.py  test_heading.py  test_html.py  test_paragraph.py
tests/snapshots/cli/: test_read_file_to_stdout_a-grand-day-out.html  test_read_file_to_stdout_a-tower-of-blocks.html  test_read_file_to_stdout_basic.html  test_read_file_to_stdout_blockquote.html  test_read_file_to_stdout_code.html  test_read_file_to_stdout_empty.html  test_read_file_to_stdout_inline-img.html  test_read_file_to_stdout_mixed-content.html  test_read_file_to_stdout_perfectly-ripe-tomatoes.html  test_read_file_to_stdout_table.html
tests/snapshots/html/: a-grand-day-out.html  a-tower-of-blocks.html  blockquote.html  inline-img.html  perfectly-ripe-tomatoes.html  quantum-slopes.html  table.html
tests/snapshots/markdown/sections/: a-grand-day-out.json  a-grand-day-out.txt  a-tower-of-blocks.txt  code.json  code.txt  inline-img.txt  lists-and-quotes.json  lists-and-quotes.txt  table.json  (+3 more)
tests/utils/: __init__.py  template_blocks.py
