[project]
name = "md-html"
version = "0.1.2"
description = "Bring the simplicity of markdown to structured html markup."
authors = [
    {name = "makejames", email = "james@makejames.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
md-html = "md_html.handler:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-snapshot>=0.9.0",
]
lint = [
    "ruff>=0.12.11",
    "mypy>=1.17.1",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff.lint]
select = ["E", "F", "I", "S", "B", "C4", "ARG", "PERF", "W", "D", "PLR"]
ignore = ["D203", "D213"]

[tool.pdm]
distribution = true

[tool.pdm.scripts]
mypy = {cmd = "mypy ./src"}
ruff-check = {cmd = "ruff check"}
ruff-fix = {cmd = "ruff check --fix"}
lint = {composite = ["ruff-check", "mypy"]}
pre-commit = {composite = ["lint", "ruff format", "test"]}
test = {cmd = "pytest -vv --cov ./src"}
